# my_rust_matrix_lib

./: .gitignore  Cargo.toml  README.md  brouillon.md  old linear  test  test.c  test.cpp  test.py  todo  todo.md
src/: lib.rs  matrix.rs  my_matrix_lib.rs  simd.rs
src/my_matrix_lib/: additional_structs.rs  algebric_traits.rs  errors.rs  linear_algebra.rs  linear_algebra_trait.rs  linear_traits.rs  matrix.rs  matrix_iterator.rs  matrix_math.rs  num_trait_application.rs  operators.rs  par_linear_alegebra.rs  quaternions.rs  quaternions_units.rs  traits.rs  usefull_functions.rs  vector_math.rs
src/my_matrix_lib/matrix/: matrix_math.rs  mod.rs
src/my_matrix_lib/quaternions/: mod.rs
src/my_matrix_lib/traits/: algebric_traits.rs  linear_traits.rs  mod.rs  num_trait_application.rs
src/my_matrix_lib/vector_math/: mod.rs
src/simd/simd_vec/: mod.rs
src/simd/simd_vec/x86_64/: mod.rs  simd_vec_x86_64.rs  simd_x86_64.rs
src/simd/simd_vec/x86_64/test/: mod.rs  sim_vec_x86_test.rs
