[package]
name = "my_rust_matrix_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
num-traits = "0.2.19"
rayon = {version = "1.10.0", optional = true}


[features]
multitrheaded = ["dep:rayon"]

